Added social links & seo tags

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,7 +1,8 @@
+<title>Ваши пироги Казань доставка выпечки</title>
 <meta chartset="utf8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<meta name='Description' content="Служба доставки пирогов 'Ваши пироги'.
-У нас вы можете закзать пироги на любой вкус: сладкие, овощные и сытные.
+<meta name='Description' content="'Ваши пироги' - доставка выпечки к Вам домой.
+У нас вы можете закзать пироги на любой вкус: сладкие, вкусные и сытные.
 Мы - лучшие в своем деле и это не преувеличение. Это - отзывы наших клиентов.
 Вот уже более пяти лет мы с любовью печём пироги для наших клиентов. Всегда свежие, сытные и вкусные!
 Наши пироги украсят ваш стол и удивят гостей неповторимым вкусом.
@@ -43,8 +44,12 @@
 Пирог с горбушей и рисом,
 Пирог с судаком и рисом
 ">
-
-<title>Доставка пирогов Казань</title>
+<meta property="og:type" content="website">
+<meta property="og:title" content="Пироги на любой вкус. Сладкие, вкусные, сытные...">
+<meta property="og:description" content="Попробуй наши пироги и ты не останешься к этому равнодушным">
+<meta property="og:url" content="https://vashipirogi.ru">
+<meta property="og:image" content="/images/cakes/cherry.jpg">
+<meta property="og:site_name" content="Ваши пироги">
 <link rel="stylesheet" type="text/css" href="/css/styles.min.css">
-<script src="js/jquery.min.js"></script>
+<script src="/js/jquery.min.js"></script>
 <%-include('favicons.ejs')%>
