--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,6 +2,20 @@
     <div>
         <img src="images/logo.jpg" alt="" />
         <div class="city">Казань</div>
+
+        <div class="social_links" style="position:absolute; left:-80px;top:15px;">
+            <div class="insta">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/vashipirogi16/">
+                    <img src="/icons/instagram.png" style="width:42px ;" alt="">
+                </a>
+            </div>
+            <div class="vk">
+                <a target="_blank" rel="noopener noreferrer" href="https://vk.com/vashipirogi16">
+                    <img src="/icons/vk.png" style="width:50px ;" alt="">
+                </a>
+            </div>
+        </div>
+
     </div>
 
 </div>
