--- a/views/partials/product_card.ejs
+++ b/views/partials/product_card.ejs
@@ -1,4 +1,4 @@
-<div class="product-card" data-pid="<%=product.id%>">
+<div id="pid-<%=product.id%>" class="product-card" data-pid="<%=product.id%>">
     <div class="photo">
         <img src="<%=product.img%>" alt="">
     </div>
