Uncommented Ya metrika

--- a/views/metrika/metrika.ejs
+++ b/views/metrika/metrika.ejs
@@ -1,4 +1,4 @@
-<!-- <script type="text/javascript">
+<script type="text/javascript">
     (function(m, e, t, r, i, k, a) {
         m[i] = m[i] || function() {
             (m[i].a = m[i].a || []).push(arguments)
@@ -14,4 +14,4 @@
         webvisor: true
     });
 </script>
-<noscript><div><img src="https://mc.yandex.ru/watch/66394666" style="position:absolute; left:-9999px;" alt="" /></div></noscript> -->
+<noscript><div><img src="https://mc.yandex.ru/watch/66394666" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
