--- a/views/pages/thnx.ejs
+++ b/views/pages/thnx.ejs
@@ -11,7 +11,7 @@
     <div id="thnx">
         <div class="thnx_grid">
             <div class="thnx_grid__item">
-                <img src="/images/logothnx.jpg" alt="">
+                <img src="/images/logothnx.png" alt="">
                 <div>Заказ принят</div>
                 <%if(id){%>
                     <div>№ <%= id%> </div>
