--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,5 @@
 <%- include('../metrika/metrika.ejs')%>
-<title>Ваши пироги Казань доставка выпечки</title>
+<title>Доставка пирогов "Ваши пироги" Казань</title>
 <meta chartset="utf8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name='Description' content="'Ваши пироги' - доставка выпечки к Вам домой.
