--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <div class="logo">
     <div>
-        <img src="images/logo.jpg" alt="" />
+        <img src="images/logo.png" alt="" />
         <div class="city">Казань</div>
 
         <div class="social_links" style="position:absolute; left:-80px;top:15px;">
