--- a/views/pages/thnx.ejs
+++ b/views/pages/thnx.ejs
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <%-include('../metrika/metrika.ejs')%>
     <link rel="stylesheet" type="text/css" href="/css/thnx.min.css">
     <%-include('../partials/favicons.ejs')%>
