--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -45,6 +45,7 @@
 Пирог с горбушей и рисом,
 Пирог с судаком и рисом
 ">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Пироги на любой вкус. Сладкие, вкусные, сытные...">
 <meta property="og:description" content="Попробуй наши пироги и ты не останешься к этому равнодушным">
