--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,5 +1,6 @@
 :root {
     --main-bg-color: #faf0e4;
+    --sec-bg-color: #F0DEC6;
     --main-font-color: #532921;
     --sec-font-color: #c3651f;
     --main-hf-shadow: rgba(83, 41, 33, 0.5);
@@ -39,7 +40,7 @@ body {
 .header {
     width: 100vw;
     grid-area: header;
-    background: white;
+    background: whitesmoke;
     box-shadow: 0 0 8px var(--main-hf-shadow);
     border-radius: 0 0 5px 5px;
     padding: 5px;
@@ -62,6 +63,22 @@ body {
     top: 0;
 }
 
+.social_links {
+    position: relative;
+    margin-top: 20px;
+    top: -60px;
+    text-align: center;
+    background-color: var(--main-font-color);
+}
+
+.social_links div {
+    display: inline-block;
+}
+
+.social_links div img {
+    width: 32px;
+}
+
 .phoneLink>a {
     color: var(--main-font-color);
     text-decoration: none;
@@ -81,7 +98,7 @@ body {
     display: grid;
     grid-template-areas: "sp_title" "sp_content";
     justify-content: center;
-    background-color: rgba(245, 245, 240, 0.2);
+    background-color: rgba(222, 193, 160, 0.2);
 }
 
 .page-3 {
@@ -244,7 +261,7 @@ body {
     padding: 2px;
     background-color: rgba(225, 225, 225, 0.9);
     border-radius: 5px;
-    z-index: 1;
+    z-index: 2;
 }
 
 .cookies_msg div {
