--- a/views/partials/cookies.ejs
+++ b/views/partials/cookies.ejs
@@ -2,7 +2,7 @@
     <div class="cookies_msg__item">
         <span>Мы используем cookies для быстрой и удобной работы сайта. Продолжая пользоваться сайтом, вы принимаете
         <a target="_blank" rel="noopener noreferrer" href="https://docs.google.com/document/d/1FB-mGuF9qEypeSdklXZzI80XgY80o3iHO7mz53B6HD8/edit?usp=sharing">условия обработки персональных данных</a>
-        </span>
-        <span id="cmsgc" onclick="closeCookieMsg()" class="cookies_msg__close">✕</span>
+        </span>        
+            <span id="cmsgc" class="cookies_msg__close"> OK</span>
     </div>
 </div>
