--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -33,6 +33,10 @@
                         <%- include("../partials/header.ejs")%>
                     </div>
 
+                    <div class="slider">
+                        <%-include('../partials/index/slider.ejs')%>
+                    </div>
+
                     <!-- Sweet pies page start-->
                     <div id="page-1" class="page-1">
                         <%- include("../partials/index/sweet_pies.ejs")%>
