--- a/views/partials/index/slider.ejs
+++ b/views/partials/index/slider.ejs
@@ -1,13 +1,15 @@
 <div class="slider__wrapper">
     <div class="slider__item">
-        <div style="height: 250px; background:orange;">10% скида именинникам</div>
+        <div style="height: 250px; background-image:url('/images/birthday.png');">10% скида именинникам</div>
     </div>
     <div class="slider__item">
-        <div style="height: 250px; background:orange;">
+        <div style="height: 250px; background-image:url('/images/gift_pies.png');">
             <div class="gifts">
-                <div style="font-size: 24px;">
-                При заказе от 1кг, пирог на выбор в подарок:
+                <div>
+                    При заказе от 1кг
+                    <br/> пирог на выбор в подарок:
                 </div>
+
                 <div>С яблоком, c вишней, с клубникой,</div>
                 <div>с курицей, с судаком, с говядиной</div>
                 <div>Вес:1кг</div>
