--- a/views/partials/index/slider.ejs
+++ b/views/partials/index/slider.ejs
@@ -1,6 +1,6 @@
 <div class="slider__wrapper">
     <div class="slider__item">
-        <div style="height: 250px; background-image:url('/images/birthday.png');">10% скида именинникам</div>
+        <div style="height: 250px; background-image:url('/images/birthday.png');">СКИДКА 10% ИМЕНИННИКАМ</div>
     </div>
     <div class="slider__item">
         <div style="height: 250px; background-image:url('/images/gift_pies.png');">
