--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -33,7 +33,7 @@
                         <%- include("../partials/header.ejs")%>
                     </div>
 
-                    <div class="slider">
+                    <div class="grid-slider">
                         <%-include('../partials/index/slider.ejs')%>
                     </div>
 
