--- a/views/partials/index/slider.ejs
+++ b/views/partials/index/slider.ejs
@@ -1,29 +1,38 @@
-<div class="slider__wrapper">
-    <div class="slider__item">
-        <div style="height: 250px; background-image:url('/images/birthday.png');">СКИДКА 10% ИМЕНИННИКАМ</div>
-    </div>
-    <div class="slider__item">
-        <div style="height: 250px; background-image:url('/images/gift_pies.png');">
-            <div class="gifts">
-                <div>
-                    При заказе от 1кг
-                    <br/> пирог на выбор в подарок:
+<div class="slider">
+    <div class="slider__wrapper">
+        <div class="slider__item">
+            <div class="birthday" style="height: 250px; background-image:url('/images/birthday.png');">
+                <div class="discount_birth">
+                    <img src="/images/text_back.png" alt="">
+                    <div class='db_txt'>ВКУСНЕЕ, ЧЕМ ТОРТЫ</div>
+                </div>
+                <img class="db_back2" src="/images/002_text_back.png" alt="">
+                <div class='db_txt2'>СКИДКА 10% ИМЕНИННИКАМ<br/>НА ВСЕ ПИРОГИ</div>
+            </div>
+        </div>
+        <div class="slider__item">
+            <div style="height: 250px; background-image:url('/images/gift_pies.png');">
+                <div class="gifts">
+                    <div>
+                        При заказе от 1кг
+                        <br/> пирог на выбор в подарок:
+                    </div>
+
+                    <div>С яблоком, c вишней, с клубникой,</div>
+                    <div>с курицей, с судаком, с говядиной</div>
+                    <div>Вес:1кг</div>
                 </div>
 
-                <div>С яблоком, c вишней, с клубникой,</div>
-                <div>с курицей, с судаком, с говядиной</div>
-                <div>Вес:1кг</div>
             </div>
 
         </div>
-
-    </div>
-    <!-- <div class="slider__item">
+        <!-- <div class="slider__item">
         <div style="height: 250px; background: violet;">3</div>
     </div>
     <div class="slider__item">
         <div style="height: 250px; background: coral;">4</div>
     </div> -->
+    </div>
+    <a class="slider__control slider__control_left" href="" role="button"></a>
+    <a class="slider__control slider__control_right slider__control_show" href="" role="button"></a>
 </div>
-<a class="slider__control slider__control_left" href="" role="button"></a>
-<a class="slider__control slider__control_right slider__control_show" href="" role="button"></a>
