--- a/views/partials/index/slider.ejs
+++ b/views/partials/index/slider.ejs
@@ -2,12 +2,16 @@
     <div class="slider__wrapper">
         <div class="slider__item">
             <div class="birthday" style="height: 250px; background-image:url('/images/birthday.png');">
-                <div class="discount_birth">
+                <div class="brth_item">
                     <img src="/images/text_back.png" alt="">
-                    <div class='db_txt'>ВКУСНЕЕ, ЧЕМ ТОРТЫ</div>
+                    <div class='birthday__head__text'>ВКУСНЕЕ, ЧЕМ ТОРТЫ</div>
                 </div>
-                <img class="db_back2" src="/images/002_text_back.png" alt="">
-                <div class='db_txt2'>СКИДКА 10% ИМЕНИННИКАМ<br/>НА ВСЕ ПИРОГИ</div>
+                <div class="birth_item__footer">
+                    <img class="db_back2" src="/images/002_text_back.png" alt="">
+                    <span class='db_txt2'>СКИДКА 10% ИМЕНИННИКАМ<br/>НА ВСЕ ПИРОГИ</span>
+                </div>
+
+
             </div>
         </div>
         <div class="slider__item">
