--- a/src/public/css/slider.css
+++ b/src/public/css/slider.css
@@ -2,6 +2,7 @@
     position: relative;
     overflow: hidden;
     max-width: 790px;
+    font-family: 'Comic Sans MS';
 }
 
 .slider__wrapper {
@@ -75,34 +76,42 @@
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
 }
 
-.discount_birth {
+.birthday {
     position: relative;
+    text-align: center;
+}
+
+.brth_item {
     display: flex;
     justify-content: center;
 }
 
-.discount_birth>img {
+.brth_item>img {
     width: 50%;
+    height: 56px;
 }
 
-.db_txt {
+.brth_item>div {
     position: absolute;
-    top: 15px;
-    font-size: 36px;
-    font-weight: 600px;
-}
-
-.db_txt2 {
-    position: absolute;
-    text-align: center;
-    bottom: 15px;
-    right: 50px;
+    top: 10px;
     font-size: 28px;
 }
 
-.db_back2 {
+.birth_item__footer {
     position: absolute;
-    bottom: 5px;
+    display: flex;
+    justify-content: flex-end;
+    bottom: 0;
     right: 0;
-    width: 50%;
+}
+
+.birth_item__footer>img {
+    width: 65%;
+}
+
+.birth_item__footer>span {
+    position: absolute;
+    font-size: 20px;
+    right: 20px;
+    bottom: 5px;
 }
