Added gift pies discount slider

--- a/views/partials/index/slider.ejs
+++ b/views/partials/index/slider.ejs
@@ -7,24 +7,28 @@
                     <div class='birthday__head__text'>ВКУСНЕЕ, ЧЕМ ТОРТЫ</div>
                 </div>
                 <div class="birth_item__footer">
-                    <img class="db_back2" src="/images/002_text_back.png" alt="">
-                    <span class='db_txt2'>СКИДКА 10% ИМЕНИННИКАМ<br/>НА ВСЕ ПИРОГИ</span>
+                    <img src="/images/002_text_back.png" alt="">
+                    <span>СКИДКА 10% ИМЕНИННИКАМ<br/>НА ВСЕ ПИРОГИ</span>
                 </div>
 
 
             </div>
         </div>
         <div class="slider__item">
-            <div style="height: 250px; background-image:url('/images/gift_pies.png');">
-                <div class="gifts">
-                    <div>
-                        При заказе от 1кг
-                        <br/> пирог на выбор в подарок:
-                    </div>
+            <div class="gift_second_pie" style="height: 250px; background-image:url('/images/gift_pies.png');">
 
-                    <div>С яблоком, c вишней, с клубникой,</div>
-                    <div>с курицей, с судаком, с говядиной</div>
-                    <div>Вес:1кг</div>
+                <div class="gift_second_pie__text">
+                    <img src="/images/gift_pie_text_back.png" alt="">
+                    <span class="text_1">АКЦИЯ 1+1  </span>
+                    <span class="text_2">ВТОРОЙ ПИРОГ БЕСПЛАТНО</span>
+                </div>
+                <div class="gift_list">
+                    <div>Акция действует до 25.08.20.<br/>Второй пирог на выбор:<br/> с яблоком, с вишней, с клубникой, с курицей, с судаком, с говядиной</div>
+                </div>
+                <div class="pies_back">
+                    <img src="/images/1_pie.png" alt="">
+                    <span>+</span>
+                    <img src="/images/2_pie.png" alt="">
                 </div>
 
             </div>
