--- a/src/public/css/slider.css
+++ b/src/public/css/slider.css
@@ -1,117 +1,174 @@
-.slider {
-    position: relative;
-    overflow: hidden;
-    max-width: 790px;
-    font-family: 'Comic Sans MS';
-}
-
-.slider__wrapper {
-    display: flex;
-    transition: transform 0.6s ease;
-}
-
-.slider__item {
-    flex: 0 0 100%;
-    max-width: 100%;
-    padding: 10px;
-    color: whitesmoke;
-    text-shadow: 0 0 5px black;
-}
-
-.slider__item>div {
-    padding: 5px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-.slider__control {
-    position: absolute;
-    top: 50%;
-    display: none;
-    align-items: center;
-    justify-content: center;
-    width: 25px;
-    color: #fff;
-    text-align: center;
-    opacity: 0.5;
-    height: 50px;
-    transform: translateY(-50%);
-    background: rgba(0, 0, 0, .5);
-}
-
-.slider__control_show {
-    display: flex;
-}
-
-.slider__control:hover,
-.slider__control:focus {
-    color: #fff;
-    text-decoration: none;
-    outline: 0;
-    opacity: .9;
-}
-
-.slider__control_left {
-    left: 10px;
-}
-
-.slider__control_right {
-    right: 10px;
-}
-
-.slider__control::before {
-    content: '';
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    background: transparent no-repeat center center;
-    background-size: 100% 100%;
-}
-
-.slider__control_left::before {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
-}
-
-.slider__control_right::before {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
-}
-
-.birthday {
-    position: relative;
-    text-align: center;
-}
-
-.brth_item {
-    display: flex;
-    justify-content: center;
-}
-
-.brth_item>img {
-    width: 50%;
-    height: 56px;
-}
-
-.brth_item>div {
-    position: absolute;
-    top: 10px;
-    font-size: 28px;
-}
-
-.birth_item__footer {
-    position: absolute;
-    display: flex;
-    justify-content: flex-end;
-    bottom: 0;
-    right: 0;
-}
-
-.birth_item__footer>img {
-    width: 65%;
-}
-
-.birth_item__footer>span {
-    position: absolute;
-    font-size: 20px;
-    right: 20px;
-    bottom: 5px;
-}
+    @font-face {
+        font-family: "ComicSansMS";
+        src: url('../fonts/ComicSansMS.ttf');
+    }
+    
+    .slider {
+        position: relative;
+        overflow: hidden;
+        max-width: 790px;
+        font-family: 'ComicSansMS';
+    }
+    
+    .slider__wrapper {
+        display: flex;
+        transition: transform 0.6s ease;
+    }
+    
+    .slider__item {
+        flex: 0 0 100%;
+        max-width: 100%;
+        color: white;
+        padding: 10px;
+    }
+    
+    .slider__item>div {
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    }
+    
+    .slider__control {
+        position: absolute;
+        top: 50%;
+        display: none;
+        align-items: center;
+        justify-content: center;
+        width: 25px;
+        color: #fff;
+        text-align: center;
+        opacity: 0.5;
+        height: 50px;
+        transform: translateY(-50%);
+        background: rgba(0, 0, 0, .5);
+    }
+    
+    .slider__control_show {
+        display: flex;
+    }
+    
+    .slider__control:hover,
+    .slider__control:focus {
+        color: #fff;
+        text-decoration: none;
+        outline: 0;
+        opacity: .9;
+    }
+    
+    .slider__control_left {
+        left: 10px;
+    }
+    
+    .slider__control_right {
+        right: 10px;
+    }
+    
+    .slider__control::before {
+        content: '';
+        display: inline-block;
+        width: 20px;
+        height: 20px;
+        background: transparent no-repeat center center;
+        background-size: 100% 100%;
+    }
+    
+    .slider__control_left::before {
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+    }
+    
+    .slider__control_right::before {
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+    }
+    
+    .birthday {
+        position: relative;
+        text-align: center;
+    }
+    
+    .brth_item {
+        display: flex;
+        justify-content: center;
+    }
+    
+    .brth_item>img {
+        width: 50%;
+        height: 56px;
+    }
+    
+    .brth_item>div {
+        position: absolute;
+        top: 10px;
+        font-size: 28px;
+    }
+    
+    .birth_item__footer {
+        position: absolute;
+        display: flex;
+        justify-content: flex-end;
+        bottom: 0;
+        right: 0;
+    }
+    
+    .birth_item__footer>img {
+        width: 65%;
+    }
+    
+    .birth_item__footer>span {
+        position: absolute;
+        font-size: 20px;
+        right: 20px;
+        bottom: 5px;
+    }
+    
+    .gift_second_pie {
+        position: relative;
+        display: flex;
+        justify-self: center;
+    }
+    
+    .gift_second_pie__text {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    
+    .gift_second_pie__text>img {
+        width: 40%;
+    }
+    
+    .gift_second_pie__text span {
+        position: absolute;
+    }
+    
+    .text_1 {
+        top: 5px;
+        font-size: 25px;
+    }
+    
+    .text_2 {
+        bottom: 10px;
+        font-size: 18px;
+    }
+    
+    .gift_list {
+        text-align: center;
+        width: 100%;
+        position: absolute;
+        bottom: 0;
+        /* color: var(--main-font-color); */
+        background-color: rgba(23, 150, 23, 0.8);
+        border-radius: 5px;
+    }
+    
+    .pies_back {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 48px;
+        color: var(--main-font-color);
+    }
+    
+    .pies_back img {
+        width: 30%;
+    }
