--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -335,7 +335,7 @@ body {
     }
     .brth_item>div {
         position: absolute;
-        top: 15px;
+        top: 10px;
         font-size: 22px;
     }
     .birth_item__footer>img {
@@ -347,6 +347,22 @@ body {
         right: 0;
         left: 5px;
         bottom: 10px;
+    }
+    .gift_second_pie__text>img {
+        width: 100%;
+        height: 80px;
+    }
+    .text_1 {
+        top: 0;
+    }
+    .text_2 {
+        bottom: 10px;
+    }
+    .gift_list {
+        font-size: 14px;
+    }
+    .pies_back img {
+        width: 40%;
     }
 }
 
