--- a/views/partials/index/register_order.ejs
+++ b/views/partials/index/register_order.ejs
@@ -31,20 +31,17 @@
         </div>
         <form method="POST" action="/create/order">
             <div class="ro_contact__phone">
-                <input type="tel" required name="phone" id="phone" placeholder="Телефон">
+                <input id="phone" type="tel" pattern="\+*\d{11}|\+*\d{6}" title="Телефон в формате 123456 или +7 123 456 78 91" required name="phone" placeholder="Номер телефона">
             </div>
             <div class="ro_contact__street">
                 <input type="text" required name="street" id="street" placeholder="Улица">
             </div>
             <div class="ro_contact__build">
-                <input type="text" required name="build" id="build" placeholder="Дом">
+                <input type="text" required name="build" id="build" placeholder="Дом" maxlength="6">
+                <input type="text" required name="flat" id="flat" placeholder="Квартира" maxlength="6">
+                <input type="text" name="entrance" id="entrance" placeholder="Подъезд" maxlength="6">
             </div>
-            <div class="ro_contact__entrance">
-                <input type="text" required name="entrance" id="entrance" placeholder="Подъезд">
-            </div>
-            <div class="ro_contact__flat">
-                <input type="text" required name="flat" id="flat" placeholder="Квартира">
-            </div>
+            
             <div class="ro_contact__comment">
                 <textarea type="text" name="comment" id="comment" placeholder="Комментарий"></textarea>
             </div>
